# opengl-opencv-timeseries

./: .gitignore
opencv/: NN_classification.ipynb  NN_segmentation.ipynb  final_road_segmentation_multiclass_unet_iou.ipynb  final_segmentation_from_chest_x_ray_dataset.ipynb  road-segmentation-multiclass-unet-iou.ipynb  v2NN_classification.ipynb
opencv/pil_and_opencv/: task2.ipynb  task3.ipynb  task4.ipynb  РО_АИ.ipynb
opengl/: .gitignore  GLSL-sh.py  PIL-texture.py  cube_rube.py  task1.1.py  task5_hw.py  texture_hw.py
openmp/reduction/: .gitignore  CMakeLists.txt  Makefile  main.cpp
time-series/: .gitignore
time-series/doklad/: dockad2.ipynb
time-series/hw/: README.md
time-series/hw/alco_task/: Задача про пьяницу.ipynb
time-series/hw/happines_task/: happines_task.ipynb
time-series/hw/rand_task/: rand.ipynb
